--- a/aiken.toml
+++ b/aiken.toml
@@ -12,3 +12,8 @@ platform = "github"
 name = "aiken-lang/stdlib"
 version = "main"
 source = "github"
+
+[[dependencies]]
+name = "ariady-putra/string_util"
+version = "main"
+source = "github"
